--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
+    vsVersion: 'latest'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
